# tether-lidar2d-consolidation-rs

./: .gitignore  Cargo.toml  README.md  dummyConfig.json
backend/: Cargo.toml
backend/src/: clustering.rs  settings.rs  tracking.rs
lidar2d-frontend/: Cargo.toml
lidar2d-frontend/src/: main.rs
rust_async_subscribe-localhost-1883/: s-1.msg  s-2.msg  s-3.msg
src/: automasking.rs  backend_config.rs  clustering.rs  config.rs  consolidator_system.rs  device_config.rs  geometry_utils.rs  lib.rs  main.rs  movement.rs  perspective.rs  presence.rs  settings.rs  smoothing.rs  tether_interface.rs  tether_utils.rs  tracking.rs  tracking_config.rs
src/systems/: automasking.rs  clustering.rs  mod.rs  movement.rs  position_remapping.rs  presence.rs  smoothing.rs
