[package]
name = "tether-lidar2d-consolidation"
description = "Tether Lidar2D Consolidator Agent, Rust edition"
version = "2.0.1-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/RandomStudio/tether-lidar2d-consolidation-rs"
homepage = "https://github.com/RandomStudio/tether-lidar2d-consolidation-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "lidar2d-backend"

[[bin]]
name = "lidar2d-frontend"

[dependencies]
async-std = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
petal-clustering = "0.5.1"
petal-neighbors = "0.8.0"
ndarray = "0.15.2"
nalgebra = "0.31.4"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.7"
log = "0.4.17"
tether-agent = "4.0.0-alpha"
# The dependencies below should be tied to options/feature set for gui
egui = "0.21.0"
eframe = "0.21.3"
egui_plot = "0.24.0"
quad-to-quad-transformer = "0.4"
# quad-to-quad-transformer = { path = "../../quad-to-quad-transformer" }
anyhow = "1.0.91"
colorsys = "0.6.7"
map-range = "0.1.2"
indexmap = { version = "2.7.0", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
